tests/mm0_mmu/fail/bad-sort1324.mmu
-- bad modifier order
(sort s1324 pure provable strict free)